--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,11 @@ DerivedData
 *.ipa
 *.xcuserstate
 
+pushtest.xcodeproj/xcshareddata/*
+pushtest.xcodeproj/xcuserdata/*
+pushtest.xcodeproj/project.xcworkspace/xcuserdata/*
+
+
 # CocoaPods
 #
 # We recommend against adding the Pods directory to your .gitignore. However
