--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,10 @@ DerivedData
 *.ipa
 *.xcuserstate
 
-pushtest.xcodeproj/xcshareddata/*
+# Ignoring direnv file 
+.envrc
+
+pushtesc.xcodeproj/xcshareddata/*
 pushtest.xcodeproj/xcuserdata/*
 pushtest.xcodeproj/project.xcworkspace/xcuserdata/*
 
